# observ

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.py  mkdocs.yml  pyproject.toml  scripts.py  setup.cfg  test.py
.github/workflows/: benchmark.yml  ci.yml  docs.yml
bench/: cachegrind.py  compare_runs.py  profiling.py  suite.py  test_bench.py  test_creation.py  test_deep_watch.py  test_notify.py  test_reads.py  test_traverse.py  test_writes.py
deppy/: __init__.py
docs/: index.md
docs/examples/: integrations.md
docs/getting-started/: installation.md  quick-start.md
docs/guide/: computed.md  gotchas.md  reactivity.md  readonly-shallow.md  scheduling.md  watchers.md
docs/internals/: architecture.md
docs/reference/: api.md
examples/: observe_qt.py  observe_rc.py  store_with_undo_redo.py
observ/: __init__.py  api.py  dep.py  dict_proxy.py  init.py  list_proxy.py  object_proxy.py  object_utils.py  observables.py  proxy.py  proxy_db.py  scheduler.py  set_proxy.py  store.py  traps.py  watcher.py
tests/: conftest.py  test_asyncio.py  test_bench.py  test_collections.py  test_deepcopy.py  test_deps.py  test_init.py  test_object_proxy.py  test_observe.py  test_ops.py  test_proxy.py  test_pygfx.py  test_qt.py  test_reference_cycles.py  test_references.py  test_scheduler.py  test_scheduler_qt.py  test_store.py  test_trap_signatures.py  test_trigger_ref.py  test_usage.py  test_watch_effect.py  test_watcher.py  test_watcher_hooks.py
