[tool.poetry]
name = "observ"
version = "0.14.1"
description = "Reactive state management for Python"
authors = [
    "Korijn van Golen <korijn@gmail.com>",
    "Berend Klein Haneveld <berendkleinhaneveld@gmail.com>",
]
license = "MIT"
homepage = "https://github.com/fork-tongue/observ"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
patchdiff = "~0.3.4"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pre-commit = "*"
pytest = "*"
pytest-benchmark = "*"
pytest-cov = "*"
pytest-timeout = "*"
twine = "*"
urllib3 = { version = "*", python = "<4" }

[tool.poetry.group.qt]
optional = true

[tool.poetry.group.qt.dependencies]
PySide6 = { version = ">=6.6", python = "<3.13" }
pytest-qt = "*"
pytest-xvfb = "*"

[tool.ruff.lint]
select = [
    "E4",
    "E5",
    "E7",
    "E9",
    "F",   # Pyflakes (default)
    "I",   # isort imports
    "N",   # pep8-naming
    "T10", # flake8-debugger
    "T20", # flake8-print
    "RUF", # ruff
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"bench/*" = ["F821"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--benchmark-columns='mean, stddev, rounds'"
timeout = 3
