[project]
name = "observ"
version = "0.15.0"
description = "Reactive state management for Python"
authors = [
    { name = "Korijn van Golen", email = "korijn@gmail.com" },
    { name = "Berend Klein Haneveld", email = "berendkleinhaneveld@gmail.com" },
]
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
dependencies = ["patchdiff~=0.3.4"]

[project.urls]
Homepage = "https://github.com/fork-tongue/observ"

[dependency-groups]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-timeout",
    "twine",
    "urllib3 ; python_version < '4'",
]
ruff = ["ruff"]
qt = [
    "PySide6>=6.6.2,!=6.8.3 ; python_version < '3.14'",
    "pytest-qt",
    "pytest-xvfb",
]
numpy = ["numpy"]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    "E4",
    "E5",
    "E7",
    "E9",
    "F",   # Pyflakes (default)
    "I",   # isort imports
    "N",   # pep8-naming
    "T10", # flake8-debugger
    "T20", # flake8-print
    "RUF", # ruff
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"bench/*" = ["F821"]

[tool.pytest.ini_options]
addopts = "--benchmark-columns='mean, stddev, rounds'"
timeout = 3
