[project]
name = "observ"
version = "1.0.0"
description = "Reactive state management for Python"
authors = [
    { name = "Korijn van Golen", email = "korijn@gmail.com" },
    { name = "Berend Klein Haneveld", email = "berendkleinhaneveld@gmail.com" },
]
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
classifiers = ["Typing :: Typed"]
dependencies = []

[project.urls]
Homepage = "https://github.com/fork-tongue/observ"

[dependency-groups]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-timeout",
    "ty",
]
ruff = ["ruff"]
ty = ["ty"]
qt = [
    "PySide6>=6.7,!=6.8.3",
    "pytest-qt",
    "pytest-xvfb",
]
pygfx = ["pygfx"]
numpy = ["numpy"]
docs = [
    "mkdocs>=1,<2",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    "E4",
    "E5",
    "E7",
    "E9",
    "F",   # Pyflakes (default)
    "I",   # isort imports
    "N",   # pep8-naming
    "T10", # flake8-debugger
    "T20", # flake8-print
    "RUF", # ruff
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"bench/*" = ["F821"]
# command line tool that reports through print
"bench/compare_runs.py" = ["T201"]

[tool.ty.src]
include = ["observ"]

[tool.ty.environment]
# Match the oldest supported Python version (requires-python), so
# that the type checker catches use of newer typing features
python-version = "3.9"

[tool.pytest.ini_options]
# GC pauses during timed rounds are a major source of benchmark noise
# (the write traps copy whole containers, generating lots of garbage),
# so garbage collection is disabled while benchmarks are being timed.
addopts = "--benchmark-columns='median, mean, stddev, rounds' --benchmark-disable-gc"
# timeout = 3
